trunk/Archive2/d5/5eafe2cda246d7/output
main.cpp: In constructor 'foo::foo()':
main.cpp:10:16: error: cannot call constructor 'foo::foo' directly
     this->foo::foo(42);
                ^
