trunk/Archive2/d5/5eafe2cda246d7/main.cpp
struct foo
{
    foo(int);
    foo();
};

foo::foo(int) {}
foo::foo()
{
    this->foo::foo(42);
}

int main()
{
    foo f;
}